@@ -11,7 +11,7 @@ import java.util.stream.Collectors;
 import static org.vaadin.joelpop.addon.printjs.PrintJs.Parameter.*;
 
 /**
- * A Java interface to Print.js to set its parameters and print.
+ * A Java wrapper for Print.js to set its parameters and print.
  * <p>
  * References:
  * <ul>
@@ -30,43 +30,83 @@ public class PrintJs {
     /**
      * Create a parameterless PrintJs object.
      */
-    public PrintJs() {
+    private PrintJs() {
         parameters = new EnumMap<>(Parameter.class);
     }
 
+    // factory methods
+
     /**
-     * Create a PrintJs object and specify the document source to be printed.
-     * <p>
-     * If no printable type is subsequently set, the type is PDF.
+     * Create a PDF PrintJs object and specify the URL of the PDF file to be printed.
      *
-     * @param printable the path of the document to be printed.
+     * @param pdfUrl the URL of the PDF file to be printed.
      */
-    public PrintJs(String printable) {
-        this();
-        setPrintable(printable);
+    public static PrintJs fromPdfUrl(String pdfUrl) {
+        var printJs = new PrintJs();
+        printJs.setPrintableType(PrintableType.PDF);
+        printJs.setPrintable(pdfUrl);
+        return printJs;
     }
 
     /**
-     * Create a PrintJs object and specify the document source and its type to be printed.
+     * Create a PDF PrintJs object and specify the base 64 object containing the PDF to be printed.
      *
-     * @param printable the document source to be printed.
-     * @param printableType the type of document to be printed.
+     * @param base64Pdf the base 64 object containing the PDF to be printed.
      */
-    public PrintJs(String printable, PrintableType printableType) {
-        this();
-        setPrintable(printable);
-        setPrintableType(printableType);
+    public static PrintJs fromBase64Pdf(String base64Pdf) {
+        var printJs = new PrintJs();
+        printJs.setPrintableType(PrintableType.PDF);
+        printJs.setBase64(true);
+        printJs.setPrintableObject(base64Pdf);
+        return printJs;
     }
 
-    // actions
+    /**
+     * Create an image PrintJs object and specify the URLs of the image files to be printed.
+     *
+     * @param imageUrls the URLs of the image files to be printed.
+     */
+    public static PrintJs fromImageUrl(String... imageUrls) {
+        var printJs = new PrintJs();
+        printJs.setPrintableType(PrintableType.IMAGE);
+        printJs.setPrintables(imageUrls);
+        return printJs;
+    }
 
     /**
-     * Print the document source using the previously-set parameters.
+     * Create an HTML PrintJs object and specify the ID of the HTML element to be printed.
      *
-     * @param ui the UI from which to print the document source.
+     * @param htmlElement the ID of the HTML element to be printed.
      */
-    public void print(UI ui) {
-        ui.getPage().executeJs("printJS(%s)".formatted(getParameterString()));
+    public static PrintJs fromHtmlElement(String htmlElement) {
+        var printJs = new PrintJs();
+        printJs.setPrintableType(PrintableType.HTML_ELEMENT);
+        printJs.setPrintable(htmlElement);
+        return printJs;
+    }
+
+    /**
+     * Create an HTML PrintJs object and specify the literal HTML to be printed.
+     *
+     * @param html the literal HTML to be printed.
+     */
+    public static PrintJs fromRawHtml(String html) {
+        var printJs = new PrintJs();
+        printJs.setPrintableType(PrintableType.RAW_HTML);
+        printJs.setPrintable(html);
+        return printJs;
+    }
+
+    /**
+     * Create a JSON PrintJs object and specify the JSON data to be printed.
+     *
+     * @param json the JSON data to be printed.
+     */
+    public static PrintJs fromJsonData(String json) {
+        var printJs = new PrintJs();
+        printJs.setPrintableType(PrintableType.JSON);
+        printJs.setPrintableObject(json);
+        return printJs;
     }
 
     // accessors
@@ -82,24 +122,76 @@ public class PrintJs {
 
     /**
      * Set the document source.
-     * <p>
-     * If no printable type is set, the document source is assumed to be PDF.
-     *
-     * <p>
-     * Valid printable type are:
-     * <ul>
-     *   <li>{@code PDF} - the URL of a PDF file on the server</li>
-     *   <li>{@code HTML} - the ID of an HTML element</li>
-     *   <li>{@code IMAGE} - the URL of an image file on the server</li>
-     *   <li>{@code JSON} - a JSON data object</li>
-     *   <li>{@code RAW_HTML} - raw HTML</li>
-     * </ul>
      *
      * @param printable the document source.
-     * Default value: {@code null}
+     *                  Default value: {@code null}
+     * @return the PrintJs object for method chaining
      */
-    public void setPrintable(String printable) {
+    private PrintJs setPrintable(String printable) {
         setStringParameter(PRINTABLE, printable);
+        return this;
+    }
+
+    /**
+     * Get the document source.
+     *
+     * @return the document source
+     */
+    public String[] getPrintables() {
+        var printableType = getPrintableType();
+        if (printableType != PrintableType.IMAGE) {
+            throw newIllegalArgumentException(PRINTABLE, printableType);
+        }
+        return getStringArrayParameter(PRINTABLE);
+    }
+
+    /**
+     * Set the document sources. (Valid only for image printable type.)
+     *
+     * @param printables the document sources.
+     *                   Default value: {@code null}
+     * @return the PrintJs object for method chaining
+     */
+    private PrintJs setPrintables(String... printables) {
+        var printableType = getPrintableType();
+        if (printableType != PrintableType.IMAGE) {
+            throw newIllegalArgumentException(PRINTABLE, printableType);
+        }
+        setStringArrayParameter(PRINTABLE, printables);
+        return this;
+    }
+
+    /**
+     * Get the document source object.
+     *
+     * @return the document source object
+     */
+    public String getPrintableObject() {
+        return getLiteralParameter(PRINTABLE);
+    }
+
+    /**
+     * Set the document source object.
+     * <p>
+     * If no printable type is set, the document source is assumed to be {@code PDF}.
+     *
+     * <p>
+     * Valid printable types are:
+     * <ul>
+     *   <li>{@code PDF} - the URL of a PDF file on the server or the base64 encoding of a PDF</li>
+     *   <li>{@code IMAGE} - the URL of an image file on the server</li>
+     *   <li>{@code HTML_ELEMENT} - the ID of an HTML element</li>
+     *   <li>{@code RAW_HTML} - raw HTML</li>
+     *   <li>{@code JSON_DATA} - a JSON data array</li>
+     * </ul>
+     *
+     * @param printableObject the document source object.
+     *                        Default value: {@code null}
+     * @return the PrintJs object for method chaining
+     */
+    private PrintJs setPrintableObject(String printableObject) {
+        setLiteralParameter(PRINTABLE, printableObject);
+        return this;
     }
 
     /**
@@ -108,48 +200,52 @@ public class PrintJs {
      * @return the printable type
      */
     public PrintableType getPrintableType() {
-        return getPrintableTypeParameter(TYPE);
+        return getPrintableTypeParameter();
     }
 
     /**
      * Set the printable type.
      *
      * @param printableType the printable type.
-     * Valid printable types are:
-     * <ul>
-     *   <li>{@code PDF} - the URL of a PDF file on the server</li>
-     *   <li>{@code HTML} - the ID of an HTML element</li>
-     *   <li>{@code IMAGE} - the URL of an image file on the server</li>
-     *   <li>{@code JSON} - a JSON data object</li>
-     *   <li>{@code RAW_HTML} - raw HTML</li>
-     * </ul>
-     * Default value: {@code PDF}
+     *                      Valid printable types are:
+     *                      <ul>
+     *                        <li>{@code PDF} - the URL of a PDF file on the server or the base64 encoding of a PDF</li>
+     *                        <li>{@code IMAGE} - the URL of an image file on the server</li>
+     *                        <li>{@code HTML_ELEMENT} - the ID of an HTML element</li>
+     *                        <li>{@code RAW_HTML} - raw HTML</li>
+     *                        <li>{@code JSON_DATA} - a JSON data array</li>
+     *                      </ul>
+     *                      Default value: {@code PDF}
+     * @return the PrintJs object for method chaining
      */
-    public void setPrintableType(PrintableType printableType) {
-        setPrintableTypeParameter(TYPE, printableType);
+    private PrintJs setPrintableType(PrintableType printableType) {
+        setPrintableTypeParameter(printableType);
+        return this;
     }
 
     /**
-     * Get the optional header text to be used with HTML, image, or JSON printing.
+     * Get the optional header text to be used when printing images, HTML, or JSON.
      *
-     * @return the optional header text to be used with HTML, image, or JSON printing
+     * @return the optional header text to be used when printing images, HTML, or JSON
      */
     public String getHeaderText() {
         return getStringParameter(HEADER);
     }
 
     /**
-     * Set optional header text to be used with HTML, image, or JSON printing.
+     * Set optional header text to be used when printing images, HTML, or JSON.
      *
      * <p>
-     * It will be placed on the top of the page. This property will accept text or raw.
+     * It will be placed on the top of the page. This property will accept text or raw
      * HTML.
      *
      * @param headerText header text.
-     * Default value: {@code null}
+     *                   Default value: {@code null}
+     * @return the PrintJs object for method chaining
      */
-    public void setHeaderText(String headerText) {
+    public PrintJs setHeaderText(String headerText) {
         setStringParameter(HEADER, headerText);
+        return this;
     }
 
     /**
@@ -165,10 +261,12 @@ public class PrintJs {
      * Set optional header style to be applied to the header text.
      *
      * @param headerStyle header style.
-     * Default value: {@code 'font-weight: 300;'}
+     *                    Default value: {@code 'font-weight: 300;'}
+     * @return the PrintJs object for method chaining
      */
-    public void setHeaderStyle(String headerStyle) {
+    public PrintJs setHeaderStyle(String headerStyle) {
         setStringParameter(HEADER_STYLE, headerStyle);
+        return this;
     }
 
     /**
@@ -184,13 +282,15 @@ public class PrintJs {
      * Set the maximum document width in pixels.
      *
      * <p>
-     * Change this as you need. Used when printing HTML, images, or JSON.
+     * Change this as you need. Used when printing images, HTML, or JSON.
      *
      * @param maxDocumentWidth the maximum document width in pixels.
-     * Default value: {@code 800}
+     *                         Default value: {@code 800}
+     * @return the PrintJs object for method chaining
      */
-    public void setMaxWidth(Integer maxDocumentWidth) {
+    public PrintJs setMaxWidth(Integer maxDocumentWidth) {
         setIntegerParameter(MAX_WIDTH, maxDocumentWidth);
+        return this;
     }
 
     /**
@@ -206,10 +306,12 @@ public class PrintJs {
      * Set CSS URLs to be applied to the HTML being printed.
      *
      * @param cssUrls CSS URLs.
-     * Default value: {@code null}
+     *                Default value: {@code null}
+     * @return the PrintJs object for method chaining
      */
-    public void setCssUrls(String... cssUrls) {
+    public PrintJs setCssUrls(String... cssUrls) {
         setStringArrayParameter(CSS, cssUrls);
+        return this;
     }
 
     /**
@@ -225,10 +327,12 @@ public class PrintJs {
      * Set a custom style string to be applied to the HTML being printed.
      *
      * @param style custom style string.
-     * Default value: {@code null}
+     *              Default value: {@code null}
+     * @return the PrintJs object for method chaining
      */
-    public void setStyle(String style) {
+    public PrintJs setStyle(String style) {
         setStringParameter(STYLE, style);
+        return this;
     }
 
     /**
@@ -239,7 +343,7 @@ public class PrintJs {
      *  {@code false} if the library should not process styles applied to the HTML being printed.
      */
     public boolean isScanStyles() {
-        return getBooleanParameter(SCAN_STYLES);
+        return isBooleanParameter(SCAN_STYLES);
     }
 
     /**
@@ -248,28 +352,29 @@ public class PrintJs {
      * <p>
      * Useful when using the CSS parameter.
      *
-     * @param scanStyles
-     *  {@code true} if the library should process styles applied to the HTML being printed,
-     *  {@code false} if the library should not process styles applied to the HTML being printed.
-     * Default value: {@code true}
+     * @param scanStyles {@code true} if the library should process styles applied to the HTML being printed,
+     *                   {@code false} if the library should not process styles applied to the HTML being printed.
+     *                   Default value: {@code true}
+     * @return the PrintJs object for method chaining
      */
-    public void setScanStyles(Boolean scanStyles) {
+    public PrintJs setScanStyles(boolean scanStyles) {
         setBooleanParameter(SCAN_STYLES, scanStyles);
+        return this;
     }
 
     /**
-     * Set if the library should process styles applied to the HTML being printed.
+     * Reset if the library should process styles applied to the HTML being printed.
      *
      * <p>
      * Useful when using the CSS parameter.
-     *
-     * @param scanStyles
-     *  {@code true} if the library should process styles applied to the HTML being printed,
-     *  {@code false} if the library should not process styles applied to the HTML being printed.
+     * <p>
      * Default value: {@code true}
+     *
+     * @return the PrintJs object for method chaining
      */
-    public void setScanStyles(boolean scanStyles) {
-        setScanStyles((Boolean) scanStyles);
+    public PrintJs resetScanStyles() {
+        clearParameter(SCAN_STYLES);
+        return this;
     }
 
     /**
@@ -289,11 +394,13 @@ public class PrintJs {
      * This option allows you to pass an array of styles that you
      * want to be processed. Ex.: {@code ['padding-top', 'border-bottom']}
      *
-     * @param targetStyle an array of styles to be processed when printing HTML elements.
-     * Default value: {@code null}
+     * @param targetStyles an array of styles to be processed when printing HTML elements.
+     *                    Default value: {@code null}
+     * @return the PrintJs object for method chaining
      */
-    public void setTargetStyles(String... targetStyle) {
-        setStringArrayParameter(TARGET_STYLE, targetStyle);
+    public PrintJs setTargetStyles(String... targetStyles) {
+        setStringArrayParameter(TARGET_STYLE, targetStyles);
+        return this;
     }
 
     /**
@@ -319,10 +426,12 @@ public class PrintJs {
      * You can also pass {@code ['*']} to process all styles.
      *
      * @param targetStyles an array of style patterns to be processed when printing HTML elements.
-     * Default value: {@code null}
+     *                     Default value: {@code null}
+     * @return the PrintJs object for method chaining
      */
-    public void setTargetStylePatterns(String... targetStyles) {
-        setStringArrayParameter(TARGET_STYLE, targetStyles);
+    public PrintJs setTargetStylePatterns(String... targetStyles) {
+        setStringArrayParameter(TARGET_STYLES, targetStyles);
+        return this;
     }
 
     /**
@@ -338,10 +447,12 @@ public class PrintJs {
      * Set the HTML IDs that should be ignored when printing a parent HTML element.
      *
      * @param ignoreElements an array of HTML IDs that should be ignored when printing a parent HTML element.
-     * Default value: {@code [ ]}
+     *                       Default value: {@code [ ]}
+     * @return the PrintJs object for method chaining
      */
-    public void setIgnoreElements(String... ignoreElements) {
+    public PrintJs setIgnoreElements(String... ignoreElements) {
         setStringArrayParameter(IGNORE_ELEMENTS, ignoreElements);
+        return this;
     }
 
     /**
@@ -357,10 +468,12 @@ public class PrintJs {
      * Set the object property names to use when printing JSON.
      *
      * @param jsonProperties the object property names.
-     * Default value: {@code null}
+     *                       Default value: {@code null}
+     * @return the PrintJs object for method chaining
      */
-    public void setJsonProperties(String... jsonProperties) {
+    public PrintJs setJsonProperties(String... jsonProperties) {
         setStringArrayParameter(JSON_PROPERTIES, jsonProperties);
+        return this;
     }
 
     /**
@@ -376,10 +489,12 @@ public class PrintJs {
      * Set the style for the grid header when printing JSON data.
      *
      * @param jsonGridHeaderStyle the style for the grid header.
-     * Default value: {@code 'font-weight: bold;'}
+     *                            Default value: {@code 'font-weight: bold;'}
+     * @return the PrintJs object for method chaining
      */
-    public void setJsonGridHeaderStyle(String jsonGridHeaderStyle) {
+    public PrintJs setJsonGridHeaderStyle(String jsonGridHeaderStyle) {
         setStringParameter(JSON_GRID_HEADER_STYLE, jsonGridHeaderStyle);
+        return this;
     }
 
     /**
@@ -395,10 +510,12 @@ public class PrintJs {
      * Set the style for grid rows when printing JSON data.
      *
      * @param jsonGridStyle the style for grid rows when printing JSON data.
-     * Default value: {@code 'border: 1px solid lightgray; margin-bottom: -1px;'}
+     *                      Default value: {@code 'border: 1px solid lightgray; margin-bottom: -1px;'}
+     * @return the PrintJs object for method chaining
      */
-    public void setJsonGridStyle(String jsonGridStyle) {
+    public PrintJs setJsonGridStyle(String jsonGridStyle) {
         setStringParameter(JSON_GRID_STYLE, jsonGridStyle);
+        return this;
     }
 
     /**
@@ -409,31 +526,32 @@ public class PrintJs {
      *  {@code false} if the JSON data table header should show on the first page only.
      */
     public boolean isJsonRepeatTableHeader() {
-        return getBooleanParameter(JSON_REPEAT_TABLE_HEADER);
+        return isBooleanParameter(JSON_REPEAT_TABLE_HEADER);
     }
 
     /**
      * Set if the JSON data table header should show on all pages or the first page only.
      *
-     * @param jsonRepeatTableHeader
-     *  {@code true} if the JSON data table header should show on all pages,
-     *  {@code false} if the JSON data table header should show on the first page only.
-     * Default value: {@code true}
+     * @param jsonRepeatTableHeader {@code true} if the JSON data table header should show on all pages,
+     *                              {@code false} if the JSON data table header should show on the first page only.
+     *                              Default value: {@code true}
+     * @return the PrintJs object for method chaining
      */
-    public void setJsonRepeatTableHeader(Boolean jsonRepeatTableHeader) {
+    public PrintJs setJsonRepeatTableHeader(boolean jsonRepeatTableHeader) {
         setBooleanParameter(JSON_REPEAT_TABLE_HEADER, jsonRepeatTableHeader);
+        return this;
     }
 
     /**
-     * Set if the JSON data table header should show on all pages or the first page only.
-     *
-     * @param jsonRepeatTableHeader
-     *  {@code true} if the JSON data table header should show on all pages,
-     *  {@code false} if the JSON data table header should show on the first page only.
+     * Reset if the JSON data table header should show on all pages or the first page only.
+     * <p>
      * Default value: {@code true}
+     *
+     * @return the PrintJs object for method chaining
      */
-    public void setJsonRepeatTableHeader(boolean jsonRepeatTableHeader) {
-        setJsonRepeatTableHeader((Boolean) jsonRepeatTableHeader);
+    public PrintJs resetJsonRepeatTableHeader() {
+        clearParameter(JSON_REPEAT_TABLE_HEADER);
+        return this;
     }
 
     /**
@@ -444,19 +562,32 @@ public class PrintJs {
      *  {@code false} if no feedback dialog should be shown.
      */
     public boolean isShowModal() {
-        return Boolean.TRUE.equals(getBooleanParameter(SHOW_MODAL));
+        return Boolean.TRUE.equals(isBooleanParameter(SHOW_MODAL));
     }
 
     /**
      * Set if a feedback dialog should be shown to user when retrieving or processing large PDF files.
      *
-     * @param showModal
-     *  {@code true} if feedback dialog should be shown,
-     *  {@code false} if no feedback dialog should be shown.
-     * Default value: {@code null}
+     * @param showModal {@code true} if feedback dialog should be shown,
+     *                  {@code false} if no feedback dialog should be shown.
+     *                  Default value: {@code null}
+     * @return the PrintJs object for method chaining
      */
-    public void setShowModal(Boolean showModal) {
+    public PrintJs setShowModal(boolean showModal) {
         setBooleanParameter(SHOW_MODAL, showModal);
+        return this;
+    }
+
+    /**
+     * Reset if a feedback dialog should be shown to user when retrieving or processing large PDF files.
+     * <p>
+     * Default value: {@code null}
+     *
+     * @return the PrintJs object for method chaining
+     */
+    public PrintJs resetShowModal() {
+        clearParameter(SHOW_MODAL);
+        return this;
     }
 
     /**
@@ -472,14 +603,16 @@ public class PrintJs {
      * Set the message displayed to users when showing feedback dialog.
      *
      * @param modalMessage the message displayed to users.
-     * Default value: {@code 'Retrieving Document...'}
+     *                     Default value: {@code 'Retrieving Document...'}
+     * @return the PrintJs object for method chaining
      */
-    public void setModalMessage(String modalMessage) {
+    public PrintJs setModalMessage(String modalMessage) {
         setStringParameter(MODAL_MESSAGE, modalMessage);
+        return this;
     }
 
     /**
-     * Set the document title shown when printing HTML, image or JSON.
+     * Set the document title shown when printing images, HTML, or JSON.
      *
      * @return the document title.
      */
@@ -488,13 +621,15 @@ public class PrintJs {
     }
 
     /**
-     * Set the document title shown when printing HTML, image or JSON.
+     * Set the document title shown when printing images, HTML, or JSON.
      *
      * @param documentTitle the document title.
-     * Default value: {@code 'Document'}
+     *                      Default value: {@code 'Document'}
+     * @return the PrintJs object for method chaining
      */
-    public void setDocumentTitle(String documentTitle) {
+    public PrintJs setDocumentTitle(String documentTitle) {
         setStringParameter(DOCUMENT_TITLE, documentTitle);
+        return this;
     }
 
     /**
@@ -517,10 +652,12 @@ public class PrintJs {
      * Javascript in your alternate PDF file.
      *
      * @param fallbackPrintable an alternate PDF URL.
-     * Default value: {@code null}
+     *                          Default value: {@code null}
+     * @return the PrintJs object for method chaining
      */
-    public void setFallbackPrintable(String fallbackPrintable) {
+    public PrintJs setFallbackPrintable(String fallbackPrintable) {
         setStringParameter(FALLBACK_PRINTABLE, fallbackPrintable);
+        return this;
     }
 
     /**
@@ -531,31 +668,20 @@ public class PrintJs {
      *  {@code false} if PDF document is not encoded.
      */
     public boolean isBase64() {
-        return getBooleanParameter(BASE64);
+        return isBooleanParameter(BASE64);
     }
 
     /**
      * Set if PDF document is encoded as base64 data.
      *
-     * @param base64
-     *  {@code true} if PDF document is encoded as base64 data,
-     *  {@code false} if PDF document is not encoded.
-     * Default value: {@code false}
+     * @param base64 {@code true} if PDF document is encoded as base64 data,
+     *               {@code false} if PDF document is not encoded.
+     *               Default value: {@code false}
+     * @return the PrintJs object for method chaining
      */
-    public void setBase64(Boolean base64) {
+    private PrintJs setBase64(boolean base64) {
         setBooleanParameter(BASE64, base64);
-    }
-
-    /**
-     * Set if PDF document is encoded as base64 data.
-     *
-     * @param base64
-     *  {@code true} if PDF document is encoded as base64 data,
-     *  {@code false} if PDF document is not encoded.
-     * Default value: {@code false}
-     */
-    public void setBase64(boolean base64) {
-        setBase64((Boolean) base64);
+        return this;
     }
 
     /**
@@ -564,17 +690,19 @@ public class PrintJs {
      * @return the Javascript function to be executed.
      */
     public String getOnLoadingStart() {
-        return getStringParameter(ON_LOADING_START);
+        return getLiteralParameter(ON_LOADING_START);
     }
 
     /**
      * Set a Javascript function to be executed before PDF is loaded.
      *
      * @param onLoadingStart a Javascript function to be executed.
-     * Default value: {@code null}
+     *                       Default value: {@code null}
+     * @return the PrintJs object for method chaining
      */
-    public void setOnLoadingStart(String onLoadingStart) {
-        setStringParameter(ON_LOADING_START, onLoadingStart);
+    public PrintJs setOnLoadingStart(String onLoadingStart) {
+        setLiteralParameter(ON_LOADING_START, onLoadingStart);
+        return this;
     }
 
     /**
@@ -583,17 +711,19 @@ public class PrintJs {
      * @return the Javascript function to be executed.
      */
     public String getOnLoadingEnd() {
-        return getStringParameter(ON_LOADING_END);
+        return getLiteralParameter(ON_LOADING_END);
     }
 
     /**
      * Set a Javascript function to be executed after PDF has loaded.
      *
      * @param onLoadingEnd a Javascript function to be executed.
-     * Default value: {@code null}
+     *                     Default value: {@code null}
+     * @return the PrintJs object for method chaining
      */
-    public void setOnLoadingEnd(String onLoadingEnd) {
-        setStringParameter(ON_LOADING_END, onLoadingEnd);
+    public PrintJs setOnLoadingEnd(String onLoadingEnd) {
+        setLiteralParameter(ON_LOADING_END, onLoadingEnd);
+        return this;
     }
 
     /**
@@ -602,7 +732,7 @@ public class PrintJs {
      * @return the Javascript function to call.
      */
     public String getOnPdfOpen() {
-        return getStringParameter(ON_PDF_OPEN);
+        return getLiteralParameter(ON_PDF_OPEN);
     }
 
     /**
@@ -616,10 +746,12 @@ public class PrintJs {
      * your print flow, update user interface, etc.
      *
      * @param onPdfOpen a Javascript function to call.
-     * Default value: {@code null}
+     *                  Default value: {@code null}
+     * @return the PrintJs object for method chaining
      */
-    public void setOnPdfOpen(String onPdfOpen) {
-        setStringParameter(ON_PDF_OPEN, onPdfOpen);
+    public PrintJs setOnPdfOpen(String onPdfOpen) {
+        setLiteralParameter(ON_PDF_OPEN, onPdfOpen);
+        return this;
     }
 
     /**
@@ -628,81 +760,213 @@ public class PrintJs {
      * @return the Javascript function to call.
      */
     public String getOnPrintDialogClose() {
-        return getStringParameter(ON_PRINT_DIALOG_CLOSE);
+        return getLiteralParameter(ON_PRINT_DIALOG_CLOSE);
     }
 
     /**
      * Set a Javascript function to call after the browser print dialog is closed.
      *
      * @param onPrintDialogClose a Javascript function to call.
-     * Default value: {@code null}
+     *                           Default value: {@code null}
+     * @return the PrintJs object for method chaining
      */
-    public void setOnPrintDialogClose(String onPrintDialogClose) {
-        setStringParameter(ON_PRINT_DIALOG_CLOSE, onPrintDialogClose);
+    public PrintJs setOnPrintDialogClose(String onPrintDialogClose) {
+        setLiteralParameter(ON_PRINT_DIALOG_CLOSE, onPrintDialogClose);
+        return this;
+    }
+
+    // actions
+
+    /**
+     * Print the document source using the previously-set parameters.
+     *
+     * @param ui the UI from which to print the document source.
+     */
+    public void print(UI ui) {
+//        ui.getPage().executeJs("printJS(%s)".formatted(getParameterString()));
+        ui.getPage().executeJs(String.format("printJS(%s)", getParameterString()));
+    }
+
+    private void clearParameter(Parameter parameter) {
+        // forbid (ignore) clearing parameters that are only settable during initialization, namely:
+        // printable type, printable, and base64 - treat it as a no-op
+        if (parameter == TYPE) {
+            return;
+        }
+        parameters.remove(parameter);
     }
 
     /**
      * Resets the configuration back to its defaults.
      */
     public void reset() {
-        parameters.clear();
+        // retain parameters that are only settable during initialization, namely:
+        // printable type, printable, and base64
+        parameters.entrySet()
+                .removeIf(parameterEntry ->
+                        !Set.of(TYPE, PRINTABLE, BASE64).contains(parameterEntry.getKey()));
     }
 
 
     // utility
 
-    private Boolean getBooleanParameter(Parameter parameter) {
-        return getRawParameter(parameter, Boolean::parseBoolean);
+    /**
+     * Get value of a parameter without any added quoting of any kind.
+     * Use for getting a parameter that is Javascript code rather than a quoted string.
+     *
+     * @param parameter the parameter to get
+     * @return the literal value, {@code null} if not set
+     */
+    private String getLiteralParameter(Parameter parameter) {
+        return getRawParameter(parameter, Function.identity());
     }
 
-    private void setBooleanParameter(Parameter parameter, Boolean value) {
+    /**
+     * Set value of a parameter without adding any quoting of any kind.
+     * Use for setting a parameter that is Javascript code rather than a quoted string.
+     *
+     * @param parameter the parameter to set
+     * @param value a literal value
+     */
+    private void setLiteralParameter(Parameter parameter, String value) {
+        setRawParameter(parameter, value, Function.identity());
+    }
+
+    /**
+     * Get value of a {@code boolean} parameter.
+     *
+     * @param parameter the parameter to get
+     * @return the {@code boolean} value, {@code false} if not set
+     */
+    private boolean isBooleanParameter(Parameter parameter) {
+        return Optional.ofNullable(getRawParameter(parameter, Boolean::parseBoolean))
+                .orElse(Boolean.FALSE);
+    }
+
+    /**
+     * Set value of a {@code boolean} parameter.
+     *
+     * @param parameter the parameter to set
+     * @param value a {@code boolean} value
+     */
+    private void setBooleanParameter(Parameter parameter, boolean value) {
         setRawParameter(parameter, value, v -> Boolean.TRUE.equals(v) ? "true" : "false");
     }
 
-    private PrintableType getPrintableTypeParameter(Parameter parameter) {
-        return PrintableType.fromKey(getStringParameter(parameter));
+    /**
+     * Get value of the {@code PrintableType} parameter.
+     *
+     * @return the {@code PrintableType} value, {@code null} if not set
+     */
+    private PrintableType getPrintableTypeParameter() {
+        return PrintableType.fromKey(getStringParameter(TYPE));
     }
 
-    private void setPrintableTypeParameter(Parameter parameter, PrintableType printableType) {
-        setStringParameter(parameter, printableType.key);
+    /**
+     * Set value of the {@code PrintableType} parameter.
+     *
+     * @param printableType a {@code PrintableType} value
+     */
+    private void setPrintableTypeParameter(PrintableType printableType) {
+        setStringParameter(TYPE, printableType.key);
     }
 
+    /**
+     * Get value of an {@code Integer} parameter.
+     *
+     * @param parameter the parameter to get
+     * @return the {@code Integer} value, {@code null} if not set
+     */
     private Integer getIntegerParameter(Parameter parameter) {
         return getRawParameter(parameter, Integer::parseInt);
     }
 
+    /**
+     * Set value of the {@code Integer} parameter.
+     *
+     * @param parameter the parameter to set
+     * @param value an {@code Integer} value
+     */
     private void setIntegerParameter(Parameter parameter, Integer value) {
         setRawParameter(parameter, value, Object::toString);
     }
 
+    /**
+     * Get value of an {@code String} parameter.
+     *
+     * @param parameter the parameter to get
+     * @return the {@code String} value, {@code null} if not set
+     */
     private String getStringParameter(Parameter parameter) {
         return getRawParameter(parameter, PrintJs::unEscapeString);
     }
 
+    /**
+     * Set value of the {@code String} parameter.
+     *
+     * @param parameter the parameter to set
+     * @param value a {@code String} value
+     */
     private void setStringParameter(Parameter parameter, String value) {
         setRawParameter(parameter, value, PrintJs::escapeString);
     }
 
+    /**
+     * Get value of an {@code String} array parameter.
+     *
+     * @param parameter the parameter to get
+     * @return the {@code String} array value, empty array if none set
+     */
     private String[] getStringArrayParameter(Parameter parameter) {
         return getRawParameter(parameter, r -> Optional.of(r)
                 .filter(a -> !a.matches("\\[ *]"))
-                .map(a -> a.substring(2, a.length() - 4))
+                .map(a -> a.substring(2, a.length() - 2))
                 .map(a -> a.split("','"))
                 .stream()
                 .flatMap(Arrays::stream)
-                .map("'%s'"::formatted)
+//                .map("'%s'"::formatted)
+                .map(s -> String.format("'%s'", s))
                 .map(PrintJs::unEscapeString)
                 .toArray(String[]::new));
     }
 
+    /**
+     * Set value of the {@code String} array parameter.
+     *
+     * @param parameter the parameter to set
+     * @param values {@code String} values
+     */
     private void setStringArrayParameter(Parameter parameter, String... values) {
-        setRawParameter(parameter, values,
-                a -> "[%s]".formatted(Arrays.stream(a)
-                        .map(PrintJs::escapeString)
-                        .collect(Collectors.joining(","))));
+        if (values.length == 0) {
+            clearParameter(parameter);
+        }
+        else {
+            setRawParameter(parameter, values,
+//                    a -> "[%s]".formatted(Arrays.stream(a)
+                    a -> String.format("[%s]", Arrays.stream(a)
+                            .map(PrintJs::escapeString)
+                            .collect(Collectors.joining(","))));
+        }
     }
 
+    /**
+     * Generic getter used by all above utility methods to get parameter values.
+     * If .
+     *
+     * @param <T> the type of the parameter value.
+     * @param parameter the parameter to set
+     * @param fromRawConverter the function to use to convert the raw value to the generic type {@code T}.
+     * @return the parameter value. If it is not set, return its default value, if the parameter has one.
+     * {@code null} otherwise.
+     */
     private <T> T getRawParameter(Parameter parameter, Function<String, T> fromRawConverter) {
+        if (parameter != TYPE) {
+            var printableType = getPrintableType();
+            if (!parameter.isSupportedBy(printableType)) {
+                throw newIllegalArgumentException(parameter, printableType);
+            }
+        }
+
         var value = Optional.ofNullable(parameters.get(parameter))
                 .orElse(parameter.defaultValue);
         return Optional.ofNullable(value)
@@ -710,7 +974,17 @@ public class PrintJs {
                 .orElse(null);
     }
 
+    /**
+     * Generic setter used by all above utility methods to set parameter values.
+     */
     private <T> void setRawParameter(Parameter parameter, T value, Function<T, String> toRawConverter) {
+        if (parameter != TYPE) {
+            var printableType = getPrintableType();
+            if (!parameter.isSupportedBy(printableType)) {
+                throw newIllegalArgumentException(parameter, printableType);
+            }
+        }
+
         if (value != null) {
             parameters.put(parameter, toRawConverter.apply(value));
         }
@@ -722,27 +996,46 @@ public class PrintJs {
     private static String escapeString(String value) {
         return Optional.ofNullable(value)
                 .map(v -> v.replace("\\", "\\\\"))
-                .map("'%s'"::formatted)
+//                .map("'%s'"::formatted)
+                .map(s -> String.format("'%s'", s))
                 .orElse(null);
     }
 
     private static String unEscapeString(String value) {
         return Optional.ofNullable(value)
-                .map(v -> v.substring(1, value.length() - 2))
+                .map(v -> v.substring(1, value.length() - 1))
                 .map(v -> v.replace("\\\\", "\\"))
                 .orElse(null);
     }
 
+    /**
+     * Returns the parameters as a Javascript string.
+     * @return the parameters as a Javascript string.
+     */
     private String getParameterString() {
-        return "{%s}".formatted(parameters.entrySet().stream()
+//        return "{%s}".formatted(parameters.entrySet().stream()
+//                .map(parameterEntry -> "%s:%s".formatted(parameterEntry.getKey().key, parameterEntry.getValue()))
+//                .collect(Collectors.joining(",")));
+        return String.format("{%s}", parameters.entrySet().stream()
                 .map(parameterEntry -> parameterEntry.getKey().key + ":" + parameterEntry.getValue())
                 .collect(Collectors.joining(",")));
     }
 
+    /**
+     * Returns the parameters as a Javascript string.
+     * @return the parameters as a Javascript string.
+     */
     @Override
     public String toString() {
-            return getParameterString();
-        }
+        return getParameterString();
+    }
+
+    private static IllegalArgumentException newIllegalArgumentException(Parameter parameter, PrintableType printableType) {
+//        return new IllegalArgumentException("Parameter '%s' is not valid for printable type %s."
+//                .formatted(parameter.name(), printableType.name()));
+        return new IllegalArgumentException(String.format("Parameter '%s' is not valid for printable type %s.",
+                parameter.name(), printableType.name()));
+    }
 
 
     // internal enums
@@ -750,27 +1043,27 @@ public class PrintJs {
     /**
      * The type of document source to print.
      */
-    public enum PrintableType {
+    enum PrintableType {
         /**
-         * The URL of a PDF file on the server.
+         * The URL of a PDF file on the server or the base64 encoding of a PDF.
          */
         PDF("pdf"),
-        /**
-         * The ID of an HTML element.
-         */
-        HTML("html"),
         /**
          * The URL of an image file on the server.
          */
         IMAGE("image"),
         /**
-         * A JSON data object.
+         * The ID of an HTML element.
          */
-        JSON("json"),
+        HTML_ELEMENT("html"),
         /**
          * Raw HTML.
          */
-        RAW_HTML("raw-html");
+        RAW_HTML("raw-html"),
+        /**
+         * A JSON data object.
+         */
+        JSON("json");
 
         public final String key;
 
@@ -788,30 +1081,41 @@ public class PrintJs {
 
     enum Parameter {
         /**
-         * Document source: PDF URL, image URL, HTML element id, or JSON data object.
+         * Document source: PDF URL, image URL, HTML element id, raw HTML, or JSON data.
          *
          * <p>
          * Default value: {@code null}
          */
-        PRINTABLE("printable"),
+        PRINTABLE("printable",
+                PrintableType.values()),
 
         /**
-         * Printable type. Available print options are: PDF, HTML, image, JSON and raw-HTML.
+         * Printable type. Available printable types are:
+         * <ul>
+         *   <li>{@code PDF} - the URL of a PDF file on the server or the base64 encoding of a PDF</li>
+         *   <li>{@code IMAGE} - the URL of an image file on the server</li>
+         *   <li>{@code HTML_ELEMENT} - the ID of an HTML element</li>
+         *   <li>{@code RAW_HTML} - raw HTML</li>
+         *   <li>{@code JSON_DATA} - a JSON data array</li>
+         * </ul>
+         *
          *
          * <p>
          * Default value: {@code 'pdf'}
          */
-        TYPE("type", "'pdf'"),
+        TYPE("type", "'pdf'",
+                PrintableType.values()),
 
         /**
-         * Optional header to be used with HTML, image or JSON printing. It will
+         * Optional header to be used when printing images, HTML, or JSON. It will
          * be placed on the top of the page. This property will accept text or raw
          * HTML.
          *
          * <p>
          * Default value: {@code null}
          */
-        HEADER("header"),
+        HEADER("header",
+                PrintableType.IMAGE, PrintableType.HTML_ELEMENT, PrintableType.RAW_HTML, PrintableType.JSON),
 
         /**
          * Optional header style to be applied to the header text.
@@ -819,16 +1123,18 @@ public class PrintJs {
          * <p>
          * Default value: {@code 'font-weight: 300;'}
          */
-        HEADER_STYLE("headerStyle", "'font-weight: 300;'"),
+        HEADER_STYLE("headerStyle", "'font-weight: 300;'",
+                PrintableType.IMAGE, PrintableType.HTML_ELEMENT, PrintableType.RAW_HTML, PrintableType.JSON),
 
         /**
-         * Max document width in pixels. Change this as you need. Used when
-         * printing HTML, images or JSON.
+         * Max document width in pixels. Change this as you need.
+         * Used when printing images, HTML, or JSON.
          *
          * <p>
          * Default value: {@code 800}
          */
-        MAX_WIDTH("maxWidth", "800"),
+        MAX_WIDTH("maxWidth", "800",
+                PrintableType.IMAGE, PrintableType.HTML_ELEMENT, PrintableType.RAW_HTML, PrintableType.JSON),
 
         /**
          * This allows us to pass one or more CSS file URLs that should be applied
@@ -838,7 +1144,8 @@ public class PrintJs {
          * <p>
          * Default value: {@code null}
          */
-        CSS("css"),
+        CSS("css",
+                PrintableType.HTML_ELEMENT, PrintableType.RAW_HTML),
 
         /**
          * This allows us to pass a string with custom style that should be applied
@@ -847,7 +1154,8 @@ public class PrintJs {
          * <p>
          * Default value: {@code null}
          */
-        STYLE("style"),
+        STYLE("style",
+                PrintableType.HTML_ELEMENT, PrintableType.RAW_HTML),
 
         /**
          * When set to false, the library will not process styles applied to the
@@ -856,17 +1164,19 @@ public class PrintJs {
          * <p>
          * Default value: {@code true}
          */
-        SCAN_STYLES("scanStyles", "true"),
+        SCAN_STYLES("scanStyles", "true",
+                PrintableType.HTML_ELEMENT, PrintableType.RAW_HTML),
 
         /**
-         * By default, the library process some styles only, when printing HTML
+         * By default, the library processes some styles only, when printing HTML
          * elements. This option allows you to pass an array of styles that you
          * want to be processed. {@code Ex.: ['padding-top', 'border-bottom']}
          *
          * <p>
          * Default value: {@code null}
          */
-        TARGET_STYLE("targetStyle"),
+        TARGET_STYLE("targetStyle",
+                PrintableType.HTML_ELEMENT, PrintableType.RAW_HTML),
 
         /**
          * Same as TARGET_STYLE, however, this will process any a range of styles.
@@ -880,7 +1190,8 @@ public class PrintJs {
          * <p>
          * Default value: {@code null}
          */
-        TARGET_STYLES("targetStyles"),
+        TARGET_STYLES("targetStyles",
+                PrintableType.HTML_ELEMENT, PrintableType.RAW_HTML),
 
         /**
          * Accepts an array of HTML IDs that should be ignored when printing a parent HTML element.
@@ -888,7 +1199,8 @@ public class PrintJs {
          * <p>
          * Default value: {@code [ ]}
          */
-        IGNORE_ELEMENTS("ignoreElements", "[ ]"),
+        IGNORE_ELEMENTS("ignoreElements", "[ ]",
+                PrintableType.HTML_ELEMENT, PrintableType.RAW_HTML),
 
         /**
          * Used when printing JSON. These are the object property names.
@@ -896,7 +1208,8 @@ public class PrintJs {
          * <p>
          * Default value: {@code null}
          */
-        JSON_PROPERTIES("properties"),
+        JSON_PROPERTIES("properties",
+                PrintableType.JSON),
 
         /**
          * Optional style for the grid header when printing JSON data.
@@ -904,7 +1217,8 @@ public class PrintJs {
          * <p>
          * Default value: {@code 'font-weight: bold;'}
          */
-        JSON_GRID_HEADER_STYLE("gridHeaderStyle", "'font-weight: bold;'"),
+        JSON_GRID_HEADER_STYLE("gridHeaderStyle", "'font-weight: bold;'",
+                PrintableType.JSON),
 
         /**
          * Optional style for the grid rows when printing JSON data.
@@ -912,7 +1226,8 @@ public class PrintJs {
          * <p>
          * Default value: {@code 'border: 1px solid lightgray; margin-bottom: -1px;'}
          */
-        JSON_GRID_STYLE("gridStyle", "'border: 1px solid lightgray; margin-bottom: -1px;'"),
+        JSON_GRID_STYLE("gridStyle", "'border: 1px solid lightgray; margin-bottom: -1px;'",
+                PrintableType.JSON),
 
         /**
          * Used when printing JSON data. When set to false,
@@ -921,7 +1236,8 @@ public class PrintJs {
          * <p>
          * Default value: {@code true}
          */
-        JSON_REPEAT_TABLE_HEADER("repeatTableHeader", "true"),
+        JSON_REPEAT_TABLE_HEADER("repeatTableHeader", "true",
+                PrintableType.JSON),
 
         /**
          * Enable this option to show feedback to user when retrieving or processing large PDF files.
@@ -929,7 +1245,8 @@ public class PrintJs {
          * <p>
          * Default value: {@code null}
          */
-        SHOW_MODAL("showModal"),
+        SHOW_MODAL("showModal",
+                PrintableType.PDF),
 
         /**
          * Message displayed to users when showModal is set to true.
@@ -937,7 +1254,8 @@ public class PrintJs {
          * <p>
          * Default value: {@code 'Retrieving Document...'}
          */
-        MODAL_MESSAGE("modalMessage", "'Retrieving Document...'"),
+        MODAL_MESSAGE("modalMessage", "'Retrieving Document...'",
+                PrintableType.PDF),
 
         /**
          * Function to be executed when PDF is being loaded
@@ -945,7 +1263,8 @@ public class PrintJs {
          * <p>
          * Default value: {@code null}
          */
-        ON_LOADING_START("onLoadingStart"),
+        ON_LOADING_START("onLoadingStart",
+                PrintableType.PDF),
 
         /**
          * Function to be executed after PDF has loaded
@@ -953,15 +1272,17 @@ public class PrintJs {
          * <p>
          * Default value: {@code null}
          */
-        ON_LOADING_END("onLoadingEnd"),
+        ON_LOADING_END("onLoadingEnd",
+                PrintableType.PDF),
 
         /**
-         * When printing HTML, image or JSON, this will be shown as the document title.
+         * When printing images, HTML, or JSON, this will be shown as the document title.
          *
          * <p>
          * Default value: {@code 'Document'}
          */
-        DOCUMENT_TITLE("documentTitle", "'Document'"),
+        DOCUMENT_TITLE("documentTitle", "'Document'",
+                PrintableType.IMAGE, PrintableType.HTML_ELEMENT, PrintableType.RAW_HTML, PrintableType.JSON),
 
         /**
          * When printing PDF, if the browser is not compatible (check browser
@@ -973,7 +1294,8 @@ public class PrintJs {
          * <p>
          * Default value: {@code null}
          */
-        FALLBACK_PRINTABLE("fallbackPrintable"),
+        FALLBACK_PRINTABLE("fallbackPrintable",
+                PrintableType.PDF),
 
         /**
          * When printing PDF, if the browser is not compatible (check browser
@@ -985,7 +1307,8 @@ public class PrintJs {
          * <p>
          * Default value: {@code null}
          */
-        ON_PDF_OPEN("onPdfOpen"),
+        ON_PDF_OPEN("onPdfOpen",
+                PrintableType.PDF),
 
         /**
          * Callback function executed once the browser print dialog is closed.
@@ -993,7 +1316,8 @@ public class PrintJs {
          * <p>
          * Default value: {@code null}
          */
-        ON_PRINT_DIALOG_CLOSE("onPrintDialogClose"),
+        ON_PRINT_DIALOG_CLOSE("onPrintDialogClose",
+                PrintableType.values()),
 
         /**
          * Used when printing PDF documents passed as base64 data.
@@ -1001,18 +1325,25 @@ public class PrintJs {
          * <p>
          * Default value: {@code false}
          */
-        BASE64("base64", "false");
+        BASE64("base64", "false",
+                PrintableType.PDF);
 
         private final String key;
         private final String defaultValue;
+        private final Set<PrintableType> printableTypes;
 
-        Parameter(String key, String defaultValue) {
+        Parameter(String key, String defaultValue, PrintableType... printableTypes) {
             this.key = key;
             this.defaultValue = defaultValue;
+            this.printableTypes = Set.of(printableTypes);
         }
 
-        Parameter(String key) {
-            this(key, null);
+        Parameter(String key, PrintableType... printableTypes) {
+            this(key, null, printableTypes);
+        }
+
+        boolean isSupportedBy(PrintableType printableType) {
+            return printableTypes.contains(printableType);
         }
     }
 
